Update project to use generics for the creatures instead of the Creature interface for easier interaction with the library